Changelog for Miosix np embedded OS

- Modified BSPs to instantiate the new classes
- Changed basicFilesystemSetup() to take a pointer to a device to mount as /sd
- Added SD drivers for stm32 and lpc2000 to miosix/common/drivers, adapted to
  the Device interface
- Fixed bug in the testsuite that was causing a file to be opened for reading
  while another thread still had it opened for writing.
- Removed interfaces/disk.h
- Starting to remove disk interface. Aggregated stm32f2 and stm32f4 drivers
  into one.
- Breaking change; the default serial for the stm32f4discovery is now USART3
  Please connect to PB10 and PB11 instead of PA2 and PA3.
- Completed serial new serial port driver, added DMA support for USART2 and 3
- Added -f option to rm in Makefile and miosix/Makefile, so that when
  doing make clean on an already clean directory, no errors are reported
- Added DMA RX for USART1 un STM32Serial. Also fixed bugs on stm32f1.
- Fixed a bug in STM32Serial: the position of the PPRE1 and PPRE2 bitfields
  in RCC->CFGR varies from device family. This was causing incorrect baudrate
  settings in some configurations.
- Added support for RTS/CTS hardware flow control to STM32 serial ports
- Added class DynUnsyncQueue to kernel/queue.h, a new circular buffer with its
  storage heap allocated.
- Breaking change: refactored the interface of class BufferQueue, and removed
  its header file. Added header kernel/queue.h with all the varius FIFO data
  structures in the kernel.
- Breaking change: serial port drivers used to have a read function to read
  a buffer of data that would return a buffer with exactly the asked size
  of data. Now they return up to that size, but if an idle line is found
  they may return less. This change is exploited in the TerminalDevice class
  to read data a buffer at a time, and not one character at a time, so all
  serial driver must implement this behaviour, or reading from serial port