@@ -1,5 +1,6 @@
 Changelog for Miosix np embedded OS
 
+- Added servomotor driving library for stm32f4discovery and stm32vldiscovery
 - Modified BSPs to instantiate the new classes
 - Changed basicFilesystemSetup() to take a pointer to a device to mount as /sd
 - Added SD drivers for stm32 and lpc2000 to miosix/common/drivers, adapted to
